--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name | Frontend Developer</title>
+    <title>Jados | Frontend Developer</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="index.css">
 </head>
@@ -35,7 +35,7 @@
         <p>I’m a newcomer to web development with a deep passion for frontend development. I love working with HTML, CSS, and JavaScript to bring designs to life and create user-friendly experiences. As I dive deeper into this field, I’m excited to explore modern tools, frameworks, and techniques—driven by a curiosity to build impactful, beautiful websites.</p>
     </section>
 
-    <!-- Projects Section (Updated) -->
+    <!-- Projects Section  -->
     <section id="projects" class="projects">
         <h2>Projects</h2>
         <div class="project-grid">
