--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
         <h2>Get in Touch</h2>
         <p>Have a project in mind or just want to chat? Reach out!</p>
         <ul class="contact-links">
-            <li>Email: <a href="mailto:your.email@example.com">mljadama21@gmail.com</a></li>
-            <li>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">yourprofile</a></li>
-            <li>GitHub: <a href="https://github.com/yourusername" target="_blank">yourusername</a></li>
+            <li>Email: <a href="mailto:mljadama21@gmail.com">mljadama21@gmail.com</a></li>
+            <li>LinkedIn: <a href="https://linkedin.com/in/Jados21" target="_blank">Jados21</a></li>
+            <li>GitHub: <a href="https://www.linkedin.com/in/modoulamin-jadama-b18978276?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">Modoulamin jadama</a></li>
         </ul>
     </section>
 
