--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <p>Have a project in mind or just want to chat? Reach out!</p>
         <ul class="contact-links">
             <li>Email: <a href="mailto:mljadama21@gmail.com">mljadama21@gmail.com</a></li>
-            <li>LinkedIn: <a href="https://linkedin.com/in/Jados21" target="_blank">Jados21</a></li>
-            <li>GitHub: <a href="https://www.linkedin.com/in/modoulamin-jadama-b18978276?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">Modoulamin jadama</a></li>
+            <li>GitHub: <a href="https://github.com/jados21" target="_blank">jados21</a></li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/modoulamin-jadama-b18978276?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">Modoulamin jadama</a></li>
         </ul>
     </section>
 
